<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginViewModel"
            type="com.freezer.chatapp.data.model.LoggedInUser" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.PhoneAuthActivity">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEnterSmsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_enter_phone_number"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <TextView
            android:id="@+id/textViewEnterSmsCodeInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_enter_phone_number_instruction"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textViewEnterSmsCode"
            app:layout_constraintStart_toStartOf="@+id/textViewEnterSmsCode"
            app:layout_constraintTop_toBottomOf="@+id/textViewEnterSmsCode" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodeHolder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:padding="4dp"
            android:background="@color/dim_gray"
            app:ccp_countryAutoDetectionPref="LOCALE_NETWORK"
            app:ccp_defaultNameCode="VN"
            app:ccp_showNameCode="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEnterSmsCodeInstruction" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@color/dim_gray"
            android:maxLines="1"
            android:inputType="phone"
            android:hint="@string/text_phone_number"
            android:padding="12dp"
            app:boxBackgroundMode="none"
            app:layout_constraintBottom_toBottomOf="@+id/countryCodeHolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/countryCodeHolder"
            app:layout_constraintTop_toTopOf="@+id/countryCodeHolder" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="@dimen/activity_bottom_button_margin_bottom"
            android:background="@drawable/ic_round_button"
            android:padding="8dp"
            android:text="@string/button_continue"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
