<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="loginViewModel"
            type="com.freezer.chatapp.data.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".ui.login.VerifySmsCodeActivity">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:background="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewEnterSmsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_enter_sms_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.12" />

        <TextView
            android:id="@+id/textViewEnterSmsCodeInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/login_enter_sms_code_instruction"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textViewEnterSmsCode"
            app:layout_constraintStart_toStartOf="@+id/textViewEnterSmsCode"
            app:layout_constraintTop_toBottomOf="@+id/textViewEnterSmsCode" />

        <com.fraggjkee.smsconfirmationview.SmsConfirmationView
            android:id="@+id/smsCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:scv_symbolBorderColor="#ADB5BD"
            app:scv_smsDetectionMode="auto"
            app:scv_codeLength="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEnterSmsCodeInstruction" />


        <TextView
            android:id="@+id/textViewResend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_bottom_button_margin_bottom"
            android:text="@string/text_resend_sms_code"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:textColor="#002DE3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
